--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,16 +22,16 @@ a {
   a:hover {
     color: #213e64; }
 
-button, .container .open .social-login .social-btn, .container .chatChoiceWrap .chatChoices .chatChoice {
+button, .container .open .social-login .social-btn, .container .chatChoiceWrap .chatChoices .chatChoice, .container .chatRoom .blockedAlert .popup .popup-btn {
   border: none;
   background-color: #ea5455;
   color: #ffffff;
   cursor: pointer;
   font-family: "Questrial", sans-serif;
   font-size: 1em; }
-  button:hover, .container .open .social-login .social-btn:hover, .container .chatChoiceWrap .chatChoices .chatChoice:hover {
+  button:hover, .container .open .social-login .social-btn:hover, .container .chatChoiceWrap .chatChoices .chatChoice:hover, .container .chatRoom .blockedAlert .popup .popup-btn:hover {
     background-color: #213e64; }
-  button:focus, .container .open .social-login .social-btn:focus, .container .chatChoiceWrap .chatChoices .chatChoice:focus {
+  button:focus, .container .open .social-login .social-btn:focus, .container .chatChoiceWrap .chatChoices .chatChoice:focus, .container .chatRoom .blockedAlert .popup .popup-btn:focus {
     outline: none; }
 
 .htags, h1, h2, h3 {
@@ -163,11 +163,11 @@ header {
         margin: 0 auto; }
     .container .open .notamember {
       padding-top: 60px; }
-    .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice {
+    .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn {
       background-color: #ffffff;
       border: #ffffff;
       color: #ea5455; }
-      .container .open #deleteUser button#delete:hover, .container .open #deleteUser .social-login #delete.social-btn:hover, .container .open .social-login #deleteUser #delete.social-btn:hover, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice:hover, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice:hover {
+      .container .open #deleteUser button#delete:hover, .container .open #deleteUser .social-login #delete.social-btn:hover, .container .open .social-login #deleteUser #delete.social-btn:hover, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice:hover, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice:hover, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn:hover, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn:hover {
         color: #213e64; }
     .container .open #appeal .form-submit {
       width: 100%;
@@ -357,6 +357,33 @@ header {
           display: inline-block; }
           .container .chatRoom .chatPartner .defaultSettings .micSettings img, .container .chatRoom .chatPartner .defaultSettings .vidSettings img {
             width: 100%; }
+    .container .chatRoom .blockedAlert {
+      display: none;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      position: fixed;
+      z-index: 300;
+      top: 0; }
+      .container .chatRoom .blockedAlert .popup {
+        width: 400px;
+        height: auto;
+        padding: 40px;
+        margin: 0 auto;
+        text-align: center;
+        background-color: #ffffff;
+        margin-top: 40%; }
+        .container .chatRoom .blockedAlert .popup h1, .container .chatRoom .blockedAlert .popup p {
+          padding: 20px 0; }
+        .container .chatRoom .blockedAlert .popup .popup-btn {
+          width: 40%;
+          max-width: 400px;
+          height: 40px;
+          margin: 10px;
+          -webkit-border-radius: 5px;
+          -moz-border-radius: 5px;
+          -ms-border-radius: 5px;
+          border-radius: 5px; }
     .container .chatRoom .displayMessagesWrap {
       width: 100%;
       padding: 20px;
