--- a/views/home.jade
+++ b/views/home.jade
@@ -57,7 +57,7 @@ block content
 						.logo
 							img#logo(src='/images/ceda2.png')
 						h1 Please enter a username
-						if (message.length > 0)
+						//-if (message.length > 0)
 							.alert #{message}
 						br
 						p Remember Ceda is anonymous, so choose a username that won't reveal any details about you
