--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -311,7 +311,7 @@ header {
             p { color: $white; text-align: center; padding-top: 21px;}
          }
     }
-    .postReply {display :none; position: fixed; bottom: 0px; width: 100%;
+    .postReply {display :none; position: fixed; bottom: 0px; width: 100%; @media screen and (min-width: 700px) {width: 500px; margin: 0 auto;}
         form {
             a {cursor: pointer;}
         }
