--- a/views/post.jade
+++ b/views/post.jade
@@ -1,6 +1,6 @@
 extends layout
 block content
-	script(type="text/javascript").
+	script.
 		$(document).ready(function(){
 			$('.reply').on('click touch', function(){ 
 				$('.postReply').show();
@@ -15,6 +15,7 @@ block content
 		//user 1 is current user
 		currentuser = '#{user._id}';
 		postuser = '#{posts[1]}';
+	- function formatDate(date) { var hours = date.getHours(); var minutes = date.getMinutes(); var ampm = hours >= 12 ? 'pm' : 'am'; hours = hours % 12; hours = hours ? hours : 12; minutes = minutes < 10 ? '0'+minutes : minutes; var strTime = hours + ':' + minutes + ' ' + ampm; var months = date.getMonth() +1; return date.getDate() + "/" + months + "/" + date.getFullYear() + "  " + strTime;}
 	.container
 		include includes/nav-simple.jade	
 		.forumWrap
@@ -31,7 +32,7 @@ block content
 									.middle-left
 										p=item[2]
 									.middle-right
-										p=item[4]
+										p #{formatDate(item[4])}
 									.post
 										p=item[3]
 									.bottom-left
@@ -45,7 +46,7 @@ block content
 									.middle-left
 										p=item[2]
 									.middle-right
-										p=item[4]
+										p #{formatDate(item[4])}
 									.post
 										p=item[3]
 									.bottom-left
