--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -238,12 +238,15 @@ header {
                 padding-bottom: $pad * 4;
                 li { list-style-type: none; }
                 .istyping { display: block; font-size: 0.8em;}
-                .msgtime { width: 100%; display: block; font-size: 0.6em; margin-bottom: -10px;}
+                .msgtime { width: 100%; display: block; font-size: 0.6em; margin-bottom: -10px; position: relative; }
                 .incomingMessage { width: 92%; display: inline-block; padding: $pad/2; margin-bottom: $pad; word-wrap: break-word;
                     .videoRequest { display: inline-block; color: $primary; padding: $pad/2 $pad/2; cursor: pointer;}
+                    .sentImage { width: 90%; margin: 0 auto; position: relative;
+                        img {width: 100%;}
+                    }
                 }
+                .incomingImage {margin-top: 15px;}
                 #user1msg { background-color: $white; color: $secondary; border: solid 1px $white; @include border-radius(5px);
-                    #image { max-width: 100%; height: auto; }
                 }
                 #user2msg { background-color: $secondary; color: $white; border: solid 1px $secondary; @include border-radius(5px); }
                 .speechbubble1 { width: 40px; display: inline-block; margin-left: -10px; position: relative; bottom: -15px;
@@ -252,9 +255,7 @@ header {
                 .speechbubble2 { width: 40px; display: inline-block; margin-right: -10px; position: relative; bottom: -15px;
                     img {width: 100%;}
                 }
-                .sentImage {
-                    width: 90%; margin: 0 auto;
-                }
+                
             }
         }
         .sendMessagesWrap { width: 100%; position: fixed; bottom: 0; @media screen and (min-width: 700px) {width: 500px; margin: 0 auto;}
@@ -357,6 +358,16 @@ header {
         }
         .settingsC { z-index: 25; 
              .settingTitle { vertical-align: middle; padding-bottom: $pad; }
+        }
+    }
+
+
+    .errorWrap {
+        @extend .chatWraps; padding-top: $pad*4; 
+        .error { padding: $pad* 4;
+            .errorImage { width: 80%; margin: 0 auto; padding-top: $pad*4;
+                img {width: 100%;}
+            }
         }
     }
 
