--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -238,7 +238,7 @@ header {
       width: 100%;
       position: absolute;
       pointer-events: none; }
-  .container .chatWraps, .container .dash, .container .chatChoiceWrap, .container .history, .container .threadList, .container .forumWrap, .container .settingsWrap {
+  .container .chatWraps, .container .dash, .container .chatChoiceWrap, .container .history, .container .threadList, .container .forumWrap, .container .settingsWrap, .container .errorWrap {
     width: 100%;
     padding: 40px 0;
     text-align: center; }
@@ -399,7 +399,8 @@ header {
           width: 100%;
           display: block;
           font-size: 0.6em;
-          margin-bottom: -10px; }
+          margin-bottom: -10px;
+          position: relative; }
         .container .chatRoom .displayMessagesWrap #incoming .incomingMessage {
           width: 92%;
           display: inline-block;
@@ -411,6 +412,14 @@ header {
             color: #ea5455;
             padding: 10px 10px;
             cursor: pointer; }
+          .container .chatRoom .displayMessagesWrap #incoming .incomingMessage .sentImage {
+            width: 90%;
+            margin: 0 auto;
+            position: relative; }
+            .container .chatRoom .displayMessagesWrap #incoming .incomingMessage .sentImage img {
+              width: 100%; }
+        .container .chatRoom .displayMessagesWrap #incoming .incomingImage {
+          margin-top: 15px; }
         .container .chatRoom .displayMessagesWrap #incoming #user1msg {
           background-color: #ffffff;
           color: #213e64;
@@ -419,9 +428,6 @@ header {
           -moz-border-radius: 5px;
           -ms-border-radius: 5px;
           border-radius: 5px; }
-          .container .chatRoom .displayMessagesWrap #incoming #user1msg #image {
-            max-width: 100%;
-            height: auto; }
         .container .chatRoom .displayMessagesWrap #incoming #user2msg {
           background-color: #213e64;
           color: #ffffff;
@@ -446,9 +452,6 @@ header {
           bottom: -15px; }
           .container .chatRoom .displayMessagesWrap #incoming .speechbubble2 img {
             width: 100%; }
-        .container .chatRoom .displayMessagesWrap #incoming .sentImage {
-          width: 90%;
-          margin: 0 auto; }
     .container .chatRoom .sendMessagesWrap {
       width: 100%;
       position: fixed;
@@ -710,5 +713,15 @@ header {
     .container .settingsWrap .settingsC .settingTitle {
       vertical-align: middle;
       padding-bottom: 20px; }
+  .container .errorWrap {
+    padding-top: 80px; }
+    .container .errorWrap .error {
+      padding: 80px; }
+      .container .errorWrap .error .errorImage {
+        width: 80%;
+        margin: 0 auto;
+        padding-top: 80px; }
+        .container .errorWrap .error .errorImage img {
+          width: 100%; }
 
 /*# sourceMappingURL=styles.css.map */
