--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,14 @@
 extends layout
-
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+	.container
+		include includes/nav-simple.jade
+		.errorWrap
+			h1 Error
+			.error
+				if (status === 500)
+					h2 Sorry, looks like something went wrong.
+				if (status === 404)
+					h2 Woops! Looks like you got a bit lost!
+				.errorImage
+					img(src="images/error_#{status}.png")
+				//-h2= message
