--- a/views/error.jade
+++ b/views/error.jade
@@ -11,4 +11,4 @@ block content
 					h2 Woops! Looks like you got a bit lost!
 				.errorImage
 					img(src="images/error_#{status}.png")
-				//-h2= message
+				h2= message
