--- a/views/settings.jade
+++ b/views/settings.jade
@@ -97,7 +97,7 @@ block content
 							label.onoffswitch-label(for='defaultVideo')
 								span.onoffswitch-inner
 								span.onoffswitch-switch
-			.settingsP
+			// .settingsP
 				.settingsPersonalize
 					h2 Personalize
 					.setting
