--- a/views/forgot.jade
+++ b/views/forgot.jade
@@ -1,17 +1,16 @@
 extends layout
-
 block content
 	.container
 		.open
 			.logo
 				img#logo(src='/images/ceda2.png')
-			h1 Forgot Password?
+			h1 Forgot Password
 			if (message.length > 0)
 				.alert #{message}
-			if (message != "Please check your email! We've sent you instructions on how to reset your password." || message != )
+			if (message != "Please check your email! We've sent you instructions on how to reset your password.")
 				form.form-login(role='form', action="/forgot", method="POST")
 					input.form-input(type="text", name="email", placeholder="Email")
-					input.form-input(type="hidden", name="password", value='')
+					input.form-input(type="hidden", name="password", value='1')
 					button.form-submit(type="submit") Reset password
 					a.forgot(href="/") Cancel
 	script.
