--- a/views/settingschange.jade
+++ b/views/settingschange.jade
@@ -18,7 +18,7 @@ block content
 			});
 		});
 	.container
-		include includes/nav.jade
+		include includes/nav-simple.jade
 		.settingsWrap
 			h1 Change #{field}
 			if (user)
