--- a/views/error.jade
+++ b/views/error.jade
@@ -10,5 +10,5 @@ block content
 				if (status === 404)
 					h2 Woops! Looks like you got a bit lost!
 				.errorImage
-					img(src="images/error_#{status}.png")
-				h2= message
+					img(src="/images/error_#{status}.png")
+				//-h2= message
