--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,16 +22,16 @@ a {
   a:hover {
     color: #213e64; }
 
-button, .container .open .social-login .social-btn, .container .chatChoiceWrap .chatChoices .chatChoice, .container .chatRoom .blockedAlert .popup .popup-btn {
+button, .container .open .social-login .social-btn, .container .dash .logout, .container .chatChoiceWrap .chatChoices .chatChoice, .container .chatRoom .blockedAlert .popup .popup-btn {
   border: none;
   background-color: #ea5455;
   color: #ffffff;
   cursor: pointer;
   font-family: "Questrial", sans-serif;
   font-size: 1em; }
-  button:hover, .container .open .social-login .social-btn:hover, .container .chatChoiceWrap .chatChoices .chatChoice:hover, .container .chatRoom .blockedAlert .popup .popup-btn:hover {
+  button:hover, .container .open .social-login .social-btn:hover, .container .dash .logout:hover, .container .chatChoiceWrap .chatChoices .chatChoice:hover, .container .chatRoom .blockedAlert .popup .popup-btn:hover {
     background-color: #213e64; }
-  button:focus, .container .open .social-login .social-btn:focus, .container .chatChoiceWrap .chatChoices .chatChoice:focus, .container .chatRoom .blockedAlert .popup .popup-btn:focus {
+  button:focus, .container .open .social-login .social-btn:focus, .container .dash .logout:focus, .container .chatChoiceWrap .chatChoices .chatChoice:focus, .container .chatRoom .blockedAlert .popup .popup-btn:focus {
     outline: none; }
 
 .htags, h1, h2, h3 {
@@ -95,7 +95,7 @@ form {
 
 header {
   height: 30px;
-  background-color: #ea5455; }
+  background-color: #e73d3e; }
   header .title {
     font-size: 0.8em;
     color: #ffffff;
@@ -163,11 +163,11 @@ header {
         margin: 0 auto; }
     .container .open .notamember {
       padding-top: 60px; }
-    .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn {
+    .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .dash #delete.logout, .container .dash .open #deleteUser #delete.logout, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn {
       background-color: #ffffff;
       border: #ffffff;
       color: #ea5455; }
-      .container .open #deleteUser button#delete:hover, .container .open #deleteUser .social-login #delete.social-btn:hover, .container .open .social-login #deleteUser #delete.social-btn:hover, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice:hover, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice:hover, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn:hover, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn:hover {
+      .container .open #deleteUser button#delete:hover, .container .open #deleteUser .social-login #delete.social-btn:hover, .container .open .social-login #deleteUser #delete.social-btn:hover, .container .open #deleteUser .dash #delete.logout:hover, .container .dash .open #deleteUser #delete.logout:hover, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice:hover, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice:hover, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn:hover, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn:hover {
         color: #213e64; }
     .container .open #appeal .form-submit {
       width: 100%;
@@ -197,14 +197,22 @@ header {
         background-color: #ea5455;
         list-style-type: none;
         width: 25%;
-        height: 100%;
+        height: 50px;
         display: inline-block;
-        padding-bottom: 7px; }
+        padding: 5px 0 7px 0;
+        position: relative; }
         .container nav ul li:hover, .container nav ul li:focus {
-          background-color: #213e64; }
-        .container nav ul li a .navoption img {
-          height: 30px;
-          margin: 10px auto 0 auto; }
+          background-color: #e73d3e; }
+        .container nav ul li a .navoption {
+          position: absolute;
+          width: 100%;
+          top: 0;
+          height: 50px; }
+          .container nav ul li a .navoption img {
+            height: 25px;
+            margin: 10px auto 0 auto; }
+          .container nav ul li a .navoption.current {
+            border-bottom: solid 5px #ffffff; }
   .container .simpleNav {
     height: 40px;
     width: 100%;
@@ -243,10 +251,23 @@ header {
     padding: 40px 0;
     text-align: center; }
   .container .dash .logout {
-    text-align: right;
+    right: 20px;
     position: absolute;
     bottom: 20px;
-    right: 20px; }
+    margin: 0 auto;
+    border: solid 2px #ea5455;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    border-radius: 5px;
+    padding: 5px 20px;
+    margin-top: 20px; }
+    .container .dash .logout:hover {
+      background-color: #213e64;
+      border: solid 2px #213e64; }
+    .container .dash .logout a {
+      color: #ffffff;
+      text-align: center; }
   .container .chatChoiceWrap .chatChoices {
     padding: 40px 0; }
     .container .chatChoiceWrap .chatChoices .chatChoice {
