--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -3,7 +3,7 @@ nav
 		li
 			a(href="/")
 				.navoption#home
-					img(src="/images/icon-dashboard.png")
+					img(src="/images/icon-home.png")
 		li
 			a(href="/forum")
 				.navoption#forum
