--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -599,6 +599,9 @@ header {
       height: auto; }
       .container .forumWrap .addPost a .add img {
         width: 100%; }
+  .container .forumWrap .newPost form a {
+    text-align: center;
+    display: block; }
   .container .options {
     padding: 20px;
     position: fixed;
