--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -275,6 +275,11 @@ header {
                 }
             }
         }
+        .newPost {
+            form {
+                a { text-align: center; display: block; }
+            }
+        }
     }
     .options { padding: $pad; position: fixed; bottom: 0px; right: 0px;
         .reply { float: right; width: 60px; height: 60px; @include border-radius(30px); background-color: $tertiary; cursor: pointer; @include box-shadow( 0px 7px 14px 0px rgba(0,0,0,0.2)); bottom: 20px;
