--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -27,6 +27,7 @@ block content
 						.popup
 							h1 You have blocked #{usersInRoom[1]}
 							p Are you sure you want to talk to them?
+							p By selecting yes, you are opting to unblock this user. You will be able to re-block them again, if you wish.
 							button.popup-btn#acceptArsehole(type='button') Yes
 							button.popup-btn#rejectArsehole(type='button') No
 					h1 #{usersInRoom[1]}
